aws/aws-kubernetes-resources/ingress_controller.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-network-loadbalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: test-network-loadbalancer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        resources:
          requests:
            memory: "64Mi"
            cpu: "256m"
          # Note: The resource limits are set to the same values as requests.
          # This is done to ensure that the container does not exceed the requested resources.
          limits:
            memory: "64Mi"
            cpu: "256m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-service
  name: echo-service
  namespace: test-network-loadbalancer
spec:
  ports:
  - name: echo
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
  type: ClusterIP 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-ingress
  namespace: test-network-loadbalancer
  labels:
    name: echoserver-ingress
spec:
  ingressClassName: external-nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: echo-service
              port: 
                name: echo
